# docs/swagger.yaml
@@ -1,5 +1,20 @@
 definitions:
-  domain.CreateUserRequest:
+  domain.User:
+    properties:
+      age:
+        type: integer
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  dto.CreateUserRequest:
     properties:
       age:
         maximum: 150
@@ -16,41 +31,73 @@ definitions:
     - email
     - name
     type: object
-  domain.ErrorData:
+  dto.HTTPErrorResp:
     properties:
-      code:
-        type: string
+      metadata:
+        $ref: '#/definitions/dto.Meta'
+    type: object
+  dto.HttpSuccessResp:
+    properties:
+      data:
+        x-order: "1"
+      metadata:
+        allOf:
+        - $ref: '#/definitions/dto.Meta'
+        x-order: "0"
+      pagination:
+        allOf:
+        - $ref: '#/definitions/dto.Pagination'
+        x-order: "2"
+    type: object
+  dto.Meta:
+    properties:
+      error:
+        type: object
+        x-order: "4"
       message:
         type: string
+        x-order: "3"
+      path:
+        type: string
+        x-order: "0"
+      status:
+        type: string
+        x-order: "2"
+      status_code:
+        type: integer
+        x-order: "1"
+      timestamp:
+        type: string
+        x-order: "5"
     type: object
-  domain.MetaData:
+  dto.Pagination:
     properties:
-      page:
+      current_elements:
         type: integer
-      page_size:
+        x-order: "1"
+      current_page:
         type: integer
-      total_items:
+        x-order: "0"
+      cursor_end:
+        type: string
+        x-order: "7"
+      cursor_start:
+        type: string
+        x-order: "6"
+      sort_by:
+        type: string
+        x-order: "4"
+      sort_dir:
+        type: string
+        x-order: "5"
+      total_elements:
         type: integer
+        x-order: "3"
       total_pages:
         type: integer
+        x-order: "2"
     type: object
-  domain.PaginatedResponse:
-    properties:
-      data: {}
-      meta:
-        $ref: '#/definitions/domain.MetaData'
-      success:
-        type: boolean
-    type: object
-  domain.Response:
-    properties:
-      data: {}
-      error:
-        $ref: '#/definitions/domain.ErrorData'
-      success:
-        type: boolean
-    type: object
-  domain.UpdateUserRequest:
+  dto.UpdateUserRequest:
     properties:
       age:
         maximum: 150
@@ -61,21 +108,6 @@ definitions:
       name:
         maxLength: 100
         minLength: 2
-        type: string
-    type: object
-  domain.User:
-    properties:
-      age:
-        type: integer
-      created_at:
-        type: string
-      email:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-      updated_at:
         type: string
     type: object
 host: localhost:8181
@@ -96,6 +128,13 @@ paths:
     get:
       description: Get a paginated list of users with optional filters
       parameters:
+      - description: Request cache control
+        enum:
+        - must-revalidate
+        - must-db-revalidate
+        in: header
+        name: Cache-Control
+        type: string
       - description: Filter by name
         in: query
         name: name
@@ -138,7 +177,7 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/domain.PaginatedResponse'
+            - $ref: '#/definitions/dto.HttpSuccessResp'
             - properties:
                 data:
                   items:
@@ -148,11 +187,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
       summary: List users
       tags:
       - users
@@ -166,7 +205,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/domain.CreateUserRequest'
+          $ref: '#/definitions/dto.CreateUserRequest'
       produces:
       - application/json
       responses:
@@ -174,7 +213,7 @@ paths:
           description: Created
           schema:
             allOf:
-            - $ref: '#/definitions/domain.Response'
+            - $ref: '#/definitions/dto.HttpSuccessResp'
             - properties:
                 data:
                   $ref: '#/definitions/domain.User'
@@ -182,11 +221,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
       summary: Create a new user
       tags:
       - users
@@ -205,15 +244,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HttpSuccessResp'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
       summary: Delete user
       tags:
       - users
@@ -232,7 +271,7 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/domain.Response'
+            - $ref: '#/definitions/dto.HttpSuccessResp'
             - properties:
                 data:
                   $ref: '#/definitions/domain.User'
@@ -240,11 +279,11 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
       summary: Get user by ID
       tags:
       - users
@@ -263,7 +302,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/domain.UpdateUserRequest'
+          $ref: '#/definitions/dto.UpdateUserRequest'
       produces:
       - application/json
       responses:
@@ -271,7 +310,7 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/domain.Response'
+            - $ref: '#/definitions/dto.HttpSuccessResp'
             - properties:
                 data:
                   $ref: '#/definitions/domain.User'
@@ -279,15 +318,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.Response'
+            $ref: '#/definitions/dto.HTTPErrorResp'
       summary: Update user
       tags:
       - users
