# src/handler/rest/user.go
@@ -1,11 +1,11 @@
 package rest
 
 import (
-	"math"
 	"net/http"
 
-	"go-far/src/domain"
-	exception "go-far/src/errors"
+	"go-far/src/dto"
+	x "go-far/src/errors"
+	"go-far/src/preference"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -19,28 +19,28 @@ import (
 //	@Tags			users
 //	@Accept			json
 //	@Produce		json
-//	@Param			user	body		domain.CreateUserRequest	true	"User data"
-//	@Success		201		{object}	domain.Response{data=domain.User}
-//	@Failure		400		{object}	domain.Response
-//	@Failure		500		{object}	domain.Response
+//	@Param			user	body		dto.CreateUserRequest	true	"User data"
+//	@Success		201		{object}	dto.HttpSuccessResp{data=domain.User}
+//	@Failure		400		{object}	dto.HTTPErrorResp
+//	@Failure		500		{object}	dto.HTTPErrorResp
 //	@Router			/users [post]
-func (r *rest) CreateUser(c *gin.Context) {
+func (e *rest) CreateUser(c *gin.Context) {
 	ctx := c.Request.Context()
-	var req domain.CreateUserRequest
 
+	var req dto.CreateUserRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		zerolog.Ctx(ctx).Error().Err(err).Msg("Invalid request body")
-		_ = c.Error(exception.BadRequestError("Invalid request body: " + err.Error()))
+		zerolog.Ctx(ctx).Error().Err(err).Msg("invalid_request_body")
+		e.httpRespError(c, x.WrapWithCode(err, x.CodeHTTPUnmarshal, "invalid_request_body"))
 		return
 	}
 
-	user, err := r.svc.User.CreateUser(c.Request.Context(), req)
+	user, err := e.svc.User.CreateUser(ctx, req)
 	if err != nil {
-		_ = c.Error(err)
+		e.httpRespError(c, err)
 		return
 	}
 
-	c.JSON(201, domain.SuccessResponse(user))
+	e.httpRespSuccess(c, http.StatusCreated, user, nil)
 }
 
 // GetUser godoc
@@ -50,25 +50,27 @@ func (r *rest) CreateUser(c *gin.Context) {
 //	@Tags			users
 //	@Produce		json
 //	@Param			id	path		string	true	"User ID"
-//	@Success		200	{object}	domain.Response{data=domain.User}
-//	@Failure		404	{object}	domain.Response
-//	@Failure		500	{object}	domain.Response
+//	@Success		200	{object}	dto.HttpSuccessResp{data=domain.User}
+//	@Failure		404	{object}	dto.HTTPErrorResp
+//	@Failure		500	{object}	dto.HTTPErrorResp
 //	@Router			/users/{id} [get]
 func (e *rest) GetUser(c *gin.Context) {
+	ctx := c.Request.Context()
+
 	id, err := uuid.Parse(c.Param("id"))
 	if err != nil {
-		e.httpRespError(c, exception.BadRequestError("Invalid user ID"))
+		zerolog.Ctx(ctx).Error().Err(err).Msg("invalid_user_id")
+		e.httpRespError(c, x.WrapWithCode(err, x.CodeHTTPBadRequest, "invalid_user_id"))
 		return
 	}
 
-	user, err := e.svc.User.GetUser(c.Request.Context(), id.String())
+	user, err := e.svc.User.GetUser(ctx, id.String())
 	if err != nil {
-		e.httpRespError(c, exception.InternalServerError("Error when getting user: "+err.Error()))
+		e.httpRespError(c, err)
 		return
 	}
 
-	// c.JSON(200, domain.SuccessResponse(user))
-	e.httpRespSuccess(c, http.StatusOK, domain.SuccessResponse(user))
+	e.httpRespSuccess(c, http.StatusOK, user, nil)
 }
 
 // ListUsers godoc
@@ -77,42 +79,44 @@ func (e *rest) GetUser(c *gin.Context) {
 //	@Description	Get a paginated list of users with optional filters
 //	@Tags			users
 //	@Produce		json
-//	@Param			name		query		string	false	"Filter by name"
-//	@Param			email		query		string	false	"Filter by email"
-//	@Param			min_age		query		int		false	"Minimum age"
-//	@Param			max_age		query		int		false	"Maximum age"
-//	@Param			page		query		int		false	"Page number"	default(1)
-//	@Param			page_size	query		int		false	"Page size"		default(10)
-//	@Param			sort_by		query		string	false	"Sort by field"
-//	@Param			sort_dir	query		string	false	"Sort direction (asc/desc)"	default(asc)
-//	@Success		200			{object}	domain.PaginatedResponse{data=[]domain.User}
-//	@Failure		400			{object}	domain.Response
-//	@Failure		500			{object}	domain.Response
+//	@Param			Cache-Control	header		string	false	"Request cache control"	Enums(must-revalidate, must-db-revalidate)
+//	@Param			name			query		string	false	"Filter by name"
+//	@Param			email			query		string	false	"Filter by email"
+//	@Param			min_age			query		int		false	"Minimum age"
+//	@Param			max_age			query		int		false	"Maximum age"
+//	@Param			page			query		int		false	"Page number"	default(1)
+//	@Param			page_size		query		int		false	"Page size"		default(10)
+//	@Param			sort_by			query		string	false	"Sort by field"
+//	@Param			sort_dir		query		string	false	"Sort direction (asc/desc)"	default(asc)
+//	@Success		200				{object}	dto.HttpSuccessResp{data=[]domain.User}
+//	@Failure		400				{object}	dto.HTTPErrorResp
+//	@Failure		500				{object}	dto.HTTPErrorResp
 //	@Router			/users [get]
 func (e *rest) ListUsers(c *gin.Context) {
-	var filter domain.UserFilter
+	ctx := c.Request.Context()
+
+	var (
+		filter       dto.UserFilter
+		cacheControl dto.CacheControl
+	)
 
 	if err := c.ShouldBindQuery(&filter); err != nil {
-		e.httpRespError(c, exception.BadRequestError("Invalid query parameters: "+err.Error()))
+		zerolog.Ctx(ctx).Error().Err(err).Msg("invalid_query_parameters")
+		e.httpRespError(c, x.WrapWithCode(err, x.CodeHTTPUnmarshal, "invalid_query_parameters"))
 		return
 	}
 
-	users, total, err := e.svc.User.ListUsers(c.Request.Context(), filter)
+	if c.Request.Header[http.CanonicalHeaderKey(preference.CacheControl)] != nil && c.Request.Header[http.CanonicalHeaderKey(preference.CacheControl)][0] == preference.CacheMustRevalidate {
+		cacheControl.MustRevalidate = true
+	}
+
+	users, pagination, err := e.svc.User.ListUsers(ctx, cacheControl, filter)
 	if err != nil {
-		e.httpRespError(c, exception.InternalServerError("Error when listing users: "+err.Error()))
+		e.httpRespError(c, err)
 		return
 	}
 
-	totalPages := int(math.Ceil(float64(total) / float64(filter.PageSize)))
-
-	response := domain.PaginatedSuccessResponse(users, domain.MetaData{
-		Page:       filter.Page,
-		PageSize:   filter.PageSize,
-		TotalItems: total,
-		TotalPages: totalPages,
-	})
-
-	e.httpRespSuccess(c, http.StatusOK, response)
+	e.httpRespSuccess(c, http.StatusOK, users, &pagination)
 }
 
 // UpdateUser godoc
@@ -122,33 +126,37 @@ func (e *rest) ListUsers(c *gin.Context) {
 //	@Tags			users
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path		string						true	"User ID"
-//	@Param			user	body		domain.UpdateUserRequest	true	"User data"
-//	@Success		200		{object}	domain.Response{data=domain.User}
-//	@Failure		400		{object}	domain.Response
-//	@Failure		404		{object}	domain.Response
-//	@Failure		500		{object}	domain.Response
+//	@Param			id		path		string					true	"User ID"
+//	@Param			user	body		dto.UpdateUserRequest	true	"User data"
+//	@Success		200		{object}	dto.HttpSuccessResp{data=domain.User}
+//	@Failure		400		{object}	dto.HTTPErrorResp
+//	@Failure		404		{object}	dto.HTTPErrorResp
+//	@Failure		500		{object}	dto.HTTPErrorResp
 //	@Router			/users/{id} [put]
 func (e *rest) UpdateUser(c *gin.Context) {
+	ctx := c.Request.Context()
+
 	id, err := uuid.Parse(c.Param("id"))
 	if err != nil {
-		e.httpRespError(c, exception.BadRequestError("Invalid user ID"))
+		zerolog.Ctx(ctx).Error().Err(err).Msg("invalid_user_id")
+		e.httpRespError(c, x.WrapWithCode(err, x.CodeHTTPBadRequest, "invalid_user_id"))
 		return
 	}
 
-	var req domain.UpdateUserRequest
+	var req dto.UpdateUserRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		e.httpRespError(c, exception.BadRequestError("Invalid request body: "+err.Error()))
+		zerolog.Ctx(ctx).Error().Err(err).Msg("invalid_request_body")
+		e.httpRespError(c, x.WrapWithCode(err, x.CodeHTTPUnmarshal, "invalid_request_body"))
 		return
 	}
 
-	user, err := e.svc.User.UpdateUser(c.Request.Context(), id.String(), req)
+	user, err := e.svc.User.UpdateUser(ctx, id.String(), req)
 	if err != nil {
-		e.httpRespError(c, exception.InternalServerError("Error when updating user: "+err.Error()))
+		e.httpRespError(c, err)
 		return
 	}
 
-	e.httpRespSuccess(c, http.StatusOK, domain.SuccessResponse(user))
+	e.httpRespSuccess(c, http.StatusOK, user, nil)
 }
 
 // DeleteUser godoc
@@ -158,21 +166,24 @@ func (e *rest) UpdateUser(c *gin.Context) {
 //	@Tags			users
 //	@Produce		json
 //	@Param			id	path		string	true	"User ID"
-//	@Success		200	{object}	domain.Response
-//	@Failure		404	{object}	domain.Response
-//	@Failure		500	{object}	domain.Response
+//	@Success		200	{object}	dto.HttpSuccessResp
+//	@Failure		404	{object}	dto.HTTPErrorResp
+//	@Failure		500	{object}	dto.HTTPErrorResp
 //	@Router			/users/{id} [delete]
 func (e *rest) DeleteUser(c *gin.Context) {
+	ctx := c.Request.Context()
+
 	id, err := uuid.Parse(c.Param("id"))
 	if err != nil {
-		e.httpRespError(c, exception.BadRequestError("Invalid user ID"))
+		zerolog.Ctx(ctx).Error().Err(err).Msg("invalid_user_id")
+		e.httpRespError(c, x.WrapWithCode(err, x.CodeHTTPBadRequest, "invalid_user_id"))
 		return
 	}
 
-	if err := e.svc.User.DeleteUser(c.Request.Context(), id.String()); err != nil {
-		e.httpRespError(c, exception.InternalServerError("Error when deleting user: "+err.Error()))
+	if err := e.svc.User.DeleteUser(ctx, id.String()); err != nil {
+		e.httpRespError(c, err)
 		return
 	}
 
-	e.httpRespSuccess(c, http.StatusOK, domain.SuccessResponse(gin.H{"message": "User deleted successfully"}))
+	e.httpRespSuccess(c, http.StatusOK, nil, nil)
 }
